[package]
name = "random_choice"
version = "0.1.0"
authors = ["Stefano Di Martino <stefano.d@posteo.de>"]
description = "Chooses samples randomly by their weights/probabilities."
repository = "https://github.com/StefanoD/Rust_Random_Choice"
keywords = ["random choice"]
license = "Apache License, Version 2.0"

[lib]
doc = true
test = true
bench = true

[dependencies]
rand = "0.3"